FIX(UPS-003): Documentation de clases y methods.